Adopt 2018 conventions
This moves to using the latest primogenitor, versions of all
dependencies, Java 11. It removes the obsolete checkstyle module.