@@ -7,8 +7,7 @@ exec java \
   -XX:MaxMetaspaceSize=32m \
   -XX:-UseCompressedClassPointers \
   -XX:+PrintGCDetails \
-  -XX:+PrintGCTimeStamps \
   -XX:TieredStopAtLevel=2 \
   -XX:+UseSerialGC \
   -Dgosh.args="--nointeractive" \
-  -jar lib/org.apache.felix.main-5.6.1.jar
+  -jar lib/org.apache.felix.main-6.0.1.jar
